# parallel-computing

./: .gitignore  README.md
lab1/: CMakeLists.txt  main.cpp
lab1/include/: gauss_consecutive.hpp  gauss_parallel.hpp  matrix_utils.hpp
lab1/scripts/: generate_input_data.py
lab1/src/: gauss_consecutive.cpp  gauss_parallel.cpp  matrix_utils.cpp
